<resources>
    <string name="app_name">Github user</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="avatar">Avatar</string>
    <string name="change_language_setting">Change Language Settings</string>
    <string name="Search">Search Username</string>
    <string name="favorite_user">Favorite User</string>
    <string name="toggle_button">Favorite Button</string>
    <string name="insert_data">Favorite user added successfully</string>
    <string name="delete_data">Favorite user deleted successfully</string>
    <string name="dark_mode">Dark Mode</string>


</resources>